# garuda_robot

./: readme.md
garuda_control/: package.xml  setup.cfg  setup.py
garuda_control/config/: xbox.config.yaml
garuda_control/launch/: teleop.launch.py
garuda_description/: package.xml  setup.cfg  setup.py
garuda_description/config/: gz_bridge.yaml
garuda_description/launch/: check_urdf.launch.py
garuda_description/urdf/: garuda.gazebo  garuda.ros2control  garuda.urdf.xacro  materials.xacro
garuda_ekf/: package.xml  setup.cfg  setup.py
garuda_gazebo/: package.xml  setup.cfg  setup.py
garuda_gazebo/launch/: spawn_robot.launch.py  world.launch.py
garuda_navigation/: package.xml  setup.cfg  setup.py
garuda_navigation/launch/: navigation.launch.py  navigation_with_slam.launch.py
garuda_slam/: package.xml  setup.cfg  setup.py
garuda_slam/launch/: mapping.launch.py
