<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>garuda_navigation</name>
  <version>1.0.0</version>
  <description>This package is developed to give the garuda robot autonomous navigation functionality</description>
  <maintainer email="prudhvirajchalapaka@gmail.com">prudhviraj</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>nav2_bringup</exec_depend>

  <exec_depend>nav2_amcl</exec_depend>

  <exec_depend>nav2_map_server</exec_depend>

  <exec_depend>rviz2</exec_depend>

  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_navfn_planner</exec_depend>
  <exec_depend>dwb_core</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
